<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_weight="1">
	
	<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/TableLayout1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:layout_margin="5dp"
	    android:gravity="center" >
	
	    <TableRow
	        android:id="@+id/tableRow3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/activity_main_name" >
	
	        <TextView
	            android:id="@+id/textView3"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:padding="5dp"
	            android:text="@string/profileeditor_textview_ap"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/profileeditor_textView_font" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <Spinner
	            android:id="@+id/spinner_profileeditor_ap"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow5"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:padding="5dp"
	            android:text="@string/profileeditor_textview_loginid"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/profileeditor_textView_font" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <EditText
	            android:id="@+id/edittext_profileeditor_loginid"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:ems="10"
	            android:inputType="text" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow6"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="left"
	            android:padding="5dp"
	            android:text="@string/profileeditor_textView_loginpw"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/profileeditor_textView_font" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center" >
	
	        <EditText
	            android:id="@+id/edittext_profileeditor_loginpw"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:ems="10"
	            android:inputType="textPassword" >
	
	            <requestFocus />
	        </EditText>
	
	    </TableRow>
	
	</TableLayout>
</ScrollView>	